RO-Crate is now created with the Dataset and updated upon every updated of the Dataset